--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shlyapka</title>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Russo+One&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
